--- a/app/src/main/res/layout/modify_tag_activity.xml
+++ b/app/src/main/res/layout/modify_tag_activity.xml
@@ -2,16 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/black">
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/edtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:layout_marginBottom="-20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
-        android:text="ooooh yeah !" />
+        android:layout_marginTop="40dp"/>
 
 </RelativeLayout>
