--- a/app/src/main/res/values/custom_style.xml
+++ b/app/src/main/res/values/custom_style.xml
@@ -14,5 +14,6 @@
     <style name="PopUpTheme" parent="android:Theme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowBackground">@drawable/round_shadow_border_shape</item>
     </style>
 </resources>
