Add fields in Edit PopUp

--- a/app/src/main/res/layout/modify_tag_activity.xml
+++ b/app/src/main/res/layout/modify_tag_activity.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/edtTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:layout_marginBottom="-20dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"/>
+    <include layout="@layout/edit_tag_activity" />
 
-</RelativeLayout>
+</LinearLayout>
