--- a/app/src/main/res/drawable/round_shadow_border_shape.xml
+++ b/app/src/main/res/drawable/round_shadow_border_shape.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <gradient
+                android:startColor="#20000000"
+                android:endColor="@android:color/transparent"
+                android:angle="90" >
+            </gradient>
+        </shape>
+    </item>
+
     <item
         android:drawable="@drawable/round_border_shape"
         android:bottom="15px"
