--- a/app/src/main/res/layout/silver_tag.xml
+++ b/app/src/main/res/layout/silver_tag.xml
@@ -23,9 +23,10 @@
         android:id="@+id/txtCounterSilver"
         android:textColor="#ff0000"
         android:textSize="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:rotation="-35"
-        android:layout_marginLeft="67dp"
-        android:layout_marginTop="77dp"/>
+        android:gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="60dp"/>
 </RelativeLayout >
