Change filters skins

--- a/app/src/main/res/layout/tags_activity.xml
+++ b/app/src/main/res/layout/tags_activity.xml
@@ -93,12 +93,12 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_gravity="bottom"
             android:button="@drawable/checkbox_screen"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_gravity="bottom"
             android:button="@drawable/checkbox_book"/>
     </LinearLayout>
 
