--- a/app/src/main/res/drawable/checkbox_book.xml
+++ b/app/src/main/res/drawable/checkbox_book.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@drawable/unchecked_book" />
-    <item android:state_checked="true" android:drawable="@drawable/checked_book" />
-    <item android:drawable="@drawable/unchecked_book" /> <!-- default state -->
+    <item android:state_checked="false" android:drawable="@mipmap/unchecked_book" />
+    <item android:state_checked="true" android:drawable="@mipmap/checked_book" />
+    <item android:drawable="@mipmap/unchecked_book" /> <!-- default state -->
 </selector>
