--- a/app/src/main/res/drawable/checkbox_book.xml
+++ b/app/src/main/res/drawable/checkbox_book.xml
@@ -2,6 +2,5 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false" android:drawable="@mipmap/unchecked_book" />
-    <item android:state_checked="true" android:drawable="@mipmap/checked_book" />
-    <item android:drawable="@mipmap/unchecked_book" /> <!-- default state -->
+    <item android:drawable="@mipmap/checked_book" />
 </selector>
