--- a/app/src/main/res/layout/tags_activity.xml
+++ b/app/src/main/res/layout/tags_activity.xml
@@ -91,11 +91,13 @@
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
         <CheckBox
+            android:id="@+id/chkScreen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:button="@drawable/checkbox_screen"/>
         <CheckBox
+            android:id="@+id/chkBook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
